[package]
name = "jvm-hook"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "classloader"
crate-type = ["cdylib"]

[dependencies]
jni = "0.20.0"
retour = { version = "0.3.1", features = ["static-detour"] }
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 2
strip = true