[package]
name = "jvm-hook"
version = "0.2.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "classloader"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
libloading = "0.8.1"
obfstr = "0.4.3"
retour = { version = "0.3.1", features = ["static-detour"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 2
strip = true
